# n2s

./: .gitignore  CLAUDE.md  README.md  main.py  propagate_blobids.py  pyproject.toml
docs/: TODO-new-docs.md  arch-202508.md  architecture.md  backend-coordination.md  blob-creation-performance-analysis.md  blob-storage-architecture.md  disaster-recovery.md  encryption_architecture_doc.md  lessons-learned-20250902.md  service-architecture.md  simplified-architecture.md  storage-layer-thinking-schema.sql  storage-layer-thinking.md
docs/archive/: architecture.md
docs/deprecate/: TODO-new-docs.md  add_snapshot_timestamp.sql  blob-storage-architecture.md  import_filelists.py  schema.sql  service-architecture.md  simplified-architecture.md  storage-layer-thinking.md
previous-work/: backup-nas-to-st.py  nas-to-st.py
recovery/: README.md  build.sh  decrypt.go  disaster_recovery.sh  go.mod  test_decrypt.sh
scripts/: add_main_to_queue.py  blob_test.py  blobify.py  check_throughput.py  cleanup_bad_blobs_db.py  deblobify.py  fix_bad_blobs.py  maintain_work_queue.py  monitor_mtime_progress.sh  pbnas_auto_tuner.py  pbnas_blob_worker-advisory_lock.py  pbnas_blob_worker.py  pbnas_orchestrator.py  populate_mtime.sh  populate_work_queue.py  setup-hooks.sh  setup_work_queue.py  test_auto_tuner.py  test_mass_client.py  update-readme-cli-help.py  update_by_filename_size.py  update_by_filename_size.sql  update_by_filename_size_safe.sql  update_mtime_batch.sh  worker_watchdog.py
scripts/archive/: find_phantom_blobs.py  (+10 more)
tests/: __init__.py  conftest.py  test_blobify_streaming.py
(+39 files in other folders)
