[project]
name = "n2s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.11.5",
    "pyrage>=1.2.5",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["n2s"]
